--- a/sass/style.css
+++ b/sass/style.css
@@ -231,21 +231,743 @@
   font-family: "abchanel-corpo", sans-serif;
 }
 
+.slide-in-right {
+  -webkit-animation: slide-in-right 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: slide-in-right 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@-webkit-keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+    transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+    transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width: 728px) and (orientation: portrait) {
+  h3 {
+    margin-bottom: 10vw;
+    font-size: 1rem;
+  }
+  h1 {
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 0.5rem;
+    line-height: 1.6428571429;
+    letter-spacing: 0.00625rem;
+    padding: 10px;
+  }
+  .hero-container img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    min-width: 100%;
+  }
+  .images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 500px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .images-container .images-Img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    background-image: url("../assets/images/giedre/giedre-mobile.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .slider {
+    max-height: 1000px;
+  }
+  .slider .slider-container {
+    margin: auto;
+    max-width: 300px;
+  }
+  .slider .slider-container h1 {
+    margin: auto;
+    width: 70%;
+    font-size: 0.573rem;
+  }
+  .slider .slider-container p {
+    margin: auto;
+    font-size: 0.6rem;
+    width: 80%;
+  }
+  .slider .slider-container a {
+    font-size: 0.3rem;
+  }
+  .slider .slider-container a .arrow {
+    border: solid #ffff;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 1px;
+  }
+  .slider .slider-container a .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  .slider .slider-container .slider-Block {
+    max-height: 500px;
+  }
+  .slider .slider-container .slider-Block .slider-contentTest img {
+    max-height: 500px;
+  }
+  .slider .slider-numberation {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+  }
+  .bottom-images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 500px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .bottom-images-container .bottom-image {
+    background-image: url("../assets/images/imari/imari-mobile.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .bottom-images-container h1 {
+    font-size: 0.6rem;
+  }
+  .bottom-images-container p {
+    font-size: 0.6rem;
+  }
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen and (max-width: 1200px) {
+  h3 {
+    margin-bottom: 10vw;
+    font-size: 1rem;
+  }
+  h1 {
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 0.5rem;
+    line-height: 1.6428571429;
+    letter-spacing: 0.00625rem;
+    padding: 10px;
+  }
+  .hero-container img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    min-width: 100%;
+  }
+  .images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 500px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .images-container .images-Img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    background-image: url("../assets/images/giedre/giedre-mobile.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .slider {
+    max-height: 1000px;
+  }
+  .slider .slider-container {
+    margin: auto;
+    max-width: 300px;
+  }
+  .slider .slider-container h1 {
+    margin: auto;
+    width: 70%;
+    font-size: 0.573rem;
+  }
+  .slider .slider-container p {
+    margin: auto;
+    font-size: 0.6rem;
+    width: 80%;
+  }
+  .slider .slider-container a {
+    font-size: 0.3rem;
+  }
+  .slider .slider-container a .arrow {
+    border: solid #ffff;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 1px;
+  }
+  .slider .slider-container a .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  .slider .slider-container .slider-Block {
+    max-height: 500px;
+  }
+  .slider .slider-container .slider-Block .slider-contentTest img {
+    max-height: 500px;
+  }
+  .slider .slider-numberation {
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  .bottom-images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 500px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .bottom-images-container .bottom-image {
+    background-image: url("../assets/images/imari/imari-mobile.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .bottom-images-container h1 {
+    font-size: 0.6rem;
+  }
+  .bottom-images-container p {
+    font-size: 0.6rem;
+  }
+}
+
+/* Desktops and laptops ---Extra Large-- */
+@media only screen and (min-width: 728px) {
+  h3 {
+    margin-bottom: 6vw;
+    font-size: 2.5rem;
+  }
+  h1 {
+    font-size: 3.5rem;
+  }
+  p {
+    font-size: 1rem;
+    line-height: 1.6428571429;
+    letter-spacing: 0.00625rem;
+    padding: 10px;
+  }
+  .hero-container img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    min-width: 100%;
+  }
+  .images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 700px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .images-container .images-Img {
+    background-image: url("../assets/images/giedre/giedre-mobile.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .slider {
+    max-height: 1000px;
+  }
+  .slider .slider-container {
+    margin: auto;
+    max-width: 1000px;
+  }
+  .slider .slider-container h1 {
+    margin: auto;
+    width: 70%;
+    font-size: 2rem;
+  }
+  .slider .slider-container p {
+    margin: auto;
+    font-size: 1rem;
+    width: 80%;
+  }
+  .slider .slider-container a {
+    font-size: 0.8rem;
+  }
+  .slider .slider-container .slider-Block {
+    max-height: 500px;
+  }
+  .slider .slider-container .slider-Block .slider-contentTest img {
+    max-height: 500px;
+  }
+  .bottom-images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 700px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .bottom-images-container .bottom-image {
+    background-image: url("../assets/images/imari/imari.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .bottom-images-container h1 {
+    font-size: 1.8rem;
+  }
+  .bottom-images-container p {
+    font-size: 1rem;
+  }
+}
+
+/* Desktops and laptops ---Extra Extra Large--- */
+@media only screen and (min-width: 1400px) {
+  h3 {
+    margin-bottom: 8vw;
+    font-size: 3.5rem;
+  }
+  h1 {
+    font-size: 5.5rem;
+  }
+  p {
+    font-size: 1.6rem;
+    line-height: 1.6428571429;
+    letter-spacing: 0.00625rem;
+    padding: 10px;
+  }
+  .hero-container img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    min-width: 100%;
+  }
+  .images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 1100px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .images-container .images-Img {
+    background-image: url("../assets/images/giedre/giedre.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .slider {
+    max-height: 1000px;
+  }
+  .slider .slider-container {
+    margin: auto;
+    max-width: 1400px;
+  }
+  .slider .slider-container h1 {
+    margin: auto;
+    width: 70%;
+    font-size: 2.5rem;
+  }
+  .slider .slider-container p {
+    margin: auto;
+    font-size: 1.3rem;
+    width: 80%;
+  }
+  .slider .slider-container a {
+    font-size: 0.8rem;
+  }
+  .bottom-images-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+    max-width: 1100px;
+    max-height: 100%;
+    position: absolute;
+  }
+  .bottom-images-container .bottom-image {
+    background-image: url("../assets/images/imari/imari.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .bottom-images-container h1 {
+    font-size: 2.5rem;
+  }
+  .bottom-images-container p {
+    font-size: 1.3rem;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: #ffff;
   background-color: #000000;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
-p {
+main {
+  margin-bottom: 3%;
+}
+
+p,
+span {
   font-family: Helvetica, Open-Sans, "sans-serif-light", sans-serif;
   font-weight: 300;
+}
+
+h1 {
+  color: #f1999c;
+  text-transform: uppercase;
+  font-family: abchanel-corpo, sans-serif;
+  font-weight: 600;
+  letter-spacing: normal;
+  line-height: 1.2;
 }
 
 h2 {
   color: #ffff;
   text-transform: uppercase;
   font-family: abchanel-corpo, sans-serif;
-  font-weight: 600;
   letter-spacing: normal;
+  line-height: 1.2;
+}
+
+h3 {
+  color: #ffff;
+  text-transform: uppercase;
+  font-family: abchanel-corpo, sans-serif;
+  font-weight: 300;
+  letter-spacing: normal;
+}
+
+.asterisk {
+  text-transform: capitalize;
+  color: #f1999c;
+  padding: 10px;
+  width: 100%;
+}
+
+.arrow {
+  border: solid #ffff;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.buttonStyle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  font-family: abchanel-corpo, sans-serif;
+  text-align: center;
+  border: 1px solid #ffff;
+  font-size: 0.6875rem;
+  line-height: 1.2727272727;
+  height: 3.125rem;
+  max-width: 12.6rem;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  vertical-align: middle;
+  padding: 0 1.5625rem;
+  cursor: pointer;
+}
+
+.buttonStyle a {
+  position: relative;
+  padding: 5px;
+  color: #ffff;
+  width: 100%;
+}
+
+.buttonStyle:hover {
+  background-color: #ffff;
+}
+
+.buttonStyle:hover a {
+  color: black;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+/*Hero Section*/
+.hero-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.hero-container .hero-image {
+  width: 100%;
+}
+
+.hero-container .hero-image img {
+  width: 100%;
+}
+
+.hero-container .hero-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+
+/* Images Section*/
+.images-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.images-container .images-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 14%;
+  margin-bottom: 14%;
+}
+
+.images-container .images-content .images-paragraph p {
+  line-height: 1.6428571429;
+  letter-spacing: 0.00625rem;
+}
+
+.images-container .images-Img {
+  min-height: 800px;
+}
+
+/* Slider Section */
+.slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 8%;
+  padding-bottom: 8%;
+  min-height: 500px;
+}
+
+.slider .slider-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-height: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  text-align: center;
+}
+
+.slider .slider-container .slider-Block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  max-height: 800px;
+}
+
+.slider .slider-container .slider-Block .slider-contentTest {
+  width: 100%;
+  text-align: center;
+  margin: 10px;
+  margin: auto;
+}
+
+.slider .slider-container .slider-Block .slider-contentTest img {
+  max-width: 100%;
+  max-height: 800px;
+}
+
+.slider .slider-container .next {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30px;
+  max-height: 60px;
+  line-height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  margin: auto;
+  background-color: #000000;
+  border: none;
+}
+
+.slider .slider-container .next .arrow {
+  border: solid #ffff;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.slider .slider-container .next .arrow:hover {
+  border-width: 0 3px 3px 0;
+}
+
+.slider .slider-container .next .right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  cursor: pointer;
+}
+
+.slider .slider-container a {
+  font-family: abchanel-corpo, sans-serif;
+  text-align: center;
+  line-height: 1.2727272727;
+  color: white;
+  text-transform: uppercase;
+}
+
+.slider .slider-container a:hover {
+  text-decoration: underline;
+}
+
+.slider .slider-numberation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  font-weight: 300;
+  font-size: 0.775rem;
+}
+
+.slider .slider-numberation span {
+  font-family: abchanel-corpo, sans-serif;
+}
+
+.slider .buttonStyle {
+  margin-top: 5%;
+}
+
+/*Image Bottom*/
+.bottom-images-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 8%;
+}
+
+.bottom-images-container .bottom-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 8%;
+}
+
+.bottom-images-container .bottom-content .bottom-content-paragraph p {
+  line-height: 1.6428571429;
+  letter-spacing: 0.00625rem;
+}
+
+.bottom-images-container .bottom-image {
+  min-height: 800px;
+}
+
+.bottom-images-container .buttonStyle {
+  margin-top: 5%;
 }
 /*# sourceMappingURL=style.css.map */
