--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,20 +1,272 @@
 @import "./colorLibrary";
 @import "./fontLibrary";
-
-body {
-  color: $font-color;
-  background-color: $background-color;
+@import "./imageLibrary";
+@import "./animations";
+@import "./responsive";
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
 }
 
-p {
-  font-family: Helvetica, Open-Sans, "sans-serif-light", sans-serif;
-  font-weight: 300;
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    color: $font-color;
+    background-color: $background-color;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+main {
+    margin-bottom: 3%;
+}
+
+p,
+span {
+    font-family: Helvetica, Open-Sans, "sans-serif-light", sans-serif;
+    font-weight: 300;
+}
+
+h1 {
+    color: $title-color;
+    text-transform: uppercase;
+    font-family: abchanel-corpo, sans-serif;
+    font-weight: 600;
+    letter-spacing: normal;
+    line-height: 1.2;
 }
 
 h2 {
-  color: $font-color;
-  text-transform: uppercase;
-  font-family: abchanel-corpo, sans-serif;
-  font-weight: 600;
-  letter-spacing: normal;
+    color: $font-color;
+    text-transform: uppercase;
+    font-family: abchanel-corpo, sans-serif;
+    letter-spacing: normal;
+    line-height: 1.2;
+}
+
+h3 {
+    color: $font-color;
+    text-transform: uppercase;
+    font-family: abchanel-corpo, sans-serif;
+    font-weight: 300;
+    letter-spacing: normal;
+}
+
+.asterisk {
+    text-transform: capitalize;
+    color: $title-color;
+    padding: 10px;
+    width: 100%;
+}
+
+.arrow {
+    border: solid $font-color;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+.buttonStyle {
+    display: flex;
+    margin: auto;
+    font-family: abchanel-corpo, sans-serif;
+    text-align: center;
+    border: 1px solid $font-color;
+    font-size: 0.6875rem;
+    line-height: 1.2727272727;
+    height: 3.125rem;
+    max-width: 12.6rem;
+    align-content: center;
+    align-items: center;
+    vertical-align: middle;
+    padding: 0 1.5625rem;
+    cursor: pointer;
+    a {
+        position: relative;
+        padding: 5px;
+        color: $font-color;
+        width: 100%;
+    }
+    &:hover {
+        background-color: $font-color;
+        a {
+            color: black;
+        }
+    }
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+
+/*Hero Section*/
+
+.hero-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width: 100%;
+    .hero-image {
+        width: 100%;
+        img {
+            width: 100%;
+        }
+    }
+    .hero-content {
+        display: flex;
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+    }
+}
+
+
+/* Images Section*/
+
+.images-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    .images-content {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        margin-top: 14%;
+        margin-bottom: 14%;
+        .images-paragraph {
+            p {
+                line-height: 1.6428571429;
+                letter-spacing: 0.00625rem;
+            }
+        }
+    }
+    .images-Img {
+        min-height: 800px;
+    }
+}
+
+
+/* Slider Section */
+
+.slider {
+    display: flex;
+    flex-direction: column;
+    padding-top: 8%;
+    padding-bottom: 8%;
+    min-height: 500px;
+    .slider-container {
+        display: flex;
+        max-height: 100%;
+        flex-direction: row;
+        text-align: center;
+        .slider-Block {
+            display: flex;
+            width: 100%;
+            max-height: 800px;
+            .slider-contentTest {
+                width: 100%;
+                text-align: center;
+                margin: 10px;
+                margin: auto;
+                img {
+                    max-width: 100%;
+                    max-height: 800px;
+                }
+            }
+        }
+        .next {
+            display: flex;
+            width: 30px;
+            max-height: 60px;
+            line-height: 100%;
+            align-items: center;
+            cursor: pointer;
+            margin: auto;
+            background-color: $background-color;
+            border: none;
+            .arrow {
+                border: solid $font-color;
+                border-width: 0 1px 1px 0;
+                display: inline-block;
+                padding: 10px;
+                cursor: pointer;
+                &:hover {
+                    border-width: 0 3px 3px 0;
+                }
+            }
+            .right {
+                transform: rotate(-45deg);
+                -webkit-transform: rotate(-45deg);
+                cursor: pointer;
+            }
+        }
+        a {
+            font-family: abchanel-corpo, sans-serif;
+            text-align: center;
+            line-height: 1.2727272727;
+            color: white;
+            text-transform: uppercase;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+    .slider-numberation {
+        display: flex;
+        margin: auto;
+        font-weight: 300;
+        font-size: 0.775rem;
+        span {
+            font-family: abchanel-corpo, sans-serif;
+        }
+    }
+    .buttonStyle {
+        margin-top: 5%;
+    }
+}
+
+
+/*Image Bottom*/
+
+.bottom-images-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 8%;
+    .bottom-content {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        padding-top: 8%;
+        .bottom-content-paragraph {
+            p {
+                line-height: 1.6428571429;
+                letter-spacing: 0.00625rem;
+            }
+        }
+    }
+    .bottom-image {
+        min-height: 800px;
+    }
+    .buttonStyle {
+        margin-top: 5%;
+    }
 }
